Fix footer theme switch alignment

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -347,10 +347,11 @@ h1, h2, h3, h4, h5, h6 {
     fill: currentColor;
 }
 
+
 .theme-switch-container {
     display: flex;
-    justify-content: flex-start;
-    grid-column: 1;
+    margin-left: auto;
+    justify-content: flex-end;
 }
 
 .footer-links .theme-switch-container {
@@ -868,6 +869,7 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     align-items: center;
     gap: 1rem;
+    flex-grow: 1;
 }
 
 .footer a {
